Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36638

OS X Mavericks default audio input & output devices are "Airplay" instead of selected default device

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 Beta1
    • 5.2.0
    • Multimedia
    • None
    • OS X 10.9.1, Desktop Qt 5.2.0 clang 64bit, iMac 21.5-inch, Late 2013
    • macOS
    • 8c9b6f67a73824aab8c74df7a1254425985fd8a5

      QSound & QSoundEffect will not work correctly on OS X 10.9.1 because QAudioDeviceFactory::defaultOutputDevice() selects the first item on the list of available devices which on this version of OS X is NOT the default device.

      e.g.:

      qDebug() <<QAudioDeviceInfo::defaultOutputDevice().deviceName();

      produces:

      "AirPlay"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            wcwuttke William Wuttke
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes